--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,4 +1,19 @@
 <div class=" card-body bg-dark text-white" style="min-height: 550px;">
+
+    <% if (courses.length){ %>
+        <div class="my-3">
+            <h5 class="font-weight-bold border-bottom border-info" data-toggle="collapse" data-target="#courseListsOwned">Created Classes</h5>
+        </div>
+        <div class="card-body my-1 collapse" id="courseListsOwned">
+        
+        <% for(let course of courses.reverse()){ %>
+            <div class="text-center my-2 pb-1 border-bottom border-info rounded-bottom">
+                <%= course.title %> - <%= course.batch %>
+            </div>
+        <% } %>
+        </div>
+    <% } %>
+    
     <% if (myJoinedClass.length){ %>
         <div>
             <h5 class="font-weight-bold border-bottom border-info" data-toggle="collapse" data-target="#courseLists">Joined Classes</h5>
@@ -8,23 +23,12 @@
         
         <% for(let course of myJoinedClass.reverse()){ %>
             <div class="text-center my-2 pb-1 border-bottom border-info rounded-bottom"> 
-                <%= course %>
-                <%= course.title %> - <%= course.batch %>
+               <%= course %>
+                <%= course.term %> - <%= course.batch %>
             </div>
         <% } %>
         </div>
-    <% } %> 
-    <% if (courses.length){ %>
-        <div class="my-3">
-            <h5 class="font-weight-bold border-bottom border-info" data-toggle="collapse" data-target="#courseListsOwned">Created Classes</h5>
-        </div>
-        <div class="card-body my-1 collapse" id="courseListsOwned">
-        
-        <% for(let course of courses){ %>
-            <div class="text-center my-2 pb-1 border-bottom border-info rounded-bottom">
-                <%= course.title %> - <%= course.batch %>
-            </div>
-        <% } %>
-        </div>
-    <% } %>     
+    <% } %>    
+    
+     
 </div>
