--- a/views/pages/dashboard/course/take-attendance.ejs
+++ b/views/pages/dashboard/course/take-attendance.ejs
@@ -1,29 +1,27 @@
 <%- include('../../../partials/header.ejs') %>
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 offset-md-2">
-                <div class="row">
-                    <div class="card card-body mx-5 my-3">
-                        <input
-                            type="submit"
-                            value="Take Attendance"
-                            class="btn btn-primary btn-sm my-2"
-                        >
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="card card-body mx-5">
-                        <h4 class="text-center mb-4">Your Attendance List</h4>
-                        <form
-                            action="/courses/take-attendance/<%= course._id %>" method="POST"
-                        >
-                            <h4><%= course._id %></h4>
-                        </form>
-                    </div>
+        <div class="col-md-8 offset-md-2">
+            <div class="row">
+                <div class="card card-body mx-5 my-3">
+                    <input type="submit" value="Take Attendance" class="btn btn-primary btn-sm my-2">
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card card-body mx-5">
+            <h4 class="text-center mb-4">Your Attendance List</h4>
+            <form action="/courses/take-attendance/<%= course._id %>" method="POST">
+                <h5>
+                    <span class="mr-5"><%= course.title %> - <%= course.batch %></span>
+                    <span class="ml-5">Joining Code: <%= course.joiningCode %> </span>
+                </h5>
+                
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" <%= isChecked ? "checked" : "" %> >
+                  </div>
+            </form>
         </div>
     </div>
 
