--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,26 +15,25 @@
                     <li class="nav-item border-left border-danger px-2">
                         <a class="nav-link text-white" href="/courses/create">Create Class</a>
                     </li>
-					<li class="nav-item border-left border-danger px-2">
-						<a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
-                    </li>
-					<li class="nav-item border-left border-right border-danger px-2">
-                        <a class="nav-link text-white" href="/auth/logout">Logout</a>
-                    </li>
-                 
-                <% } else { %>
                     <li class="nav-item border-left border-danger px-2">
-                        <a class="nav-link text-white" href="/auth/login">Login</a>
+                        <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
                     </li>
                     <li class="nav-item border-left border-right border-danger px-2">
-                        <a class="nav-link text-white" href="/auth/signup">Signup</a>
+                        <a class="nav-link text-white" href="/auth/logout">Logout</a>
                     </li>
-                <% } %>  
-            </ul><!-- 
-            <form class="form-inline my-2 my-lg-0" method="GET" action="/search">
-                <input class="form-control mr-sm-2" name="term" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form> -->
+                    <a class="nav-link text-white" href="#">
+                        <%= user %>
+                    </a>
+
+                    <% } else { %>
+                        <li class="nav-item border-left border-danger px-2">
+                            <a class="nav-link text-white" href="/auth/login">Login</a>
+                        </li>
+                        <li class="nav-item border-left border-right border-danger px-2">
+                            <a class="nav-link text-white" href="/auth/signup">Signup</a>
+                        </li>
+                        <% } %>
+            </ul>
         </div>
     </div>
 </nav>
