--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
                         <a class="nav-link text-white" href="/auth/logout">Logout</a>
                     </li>
                     <a class="nav-link text-white" href="#">
-                        <%= user %>
+                        <%= userId %>
                     </a>
 
                     <% } else { %>
