--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -12,7 +12,7 @@
                                 name="userId"
                                 id="userId"
                                 class="form-control <%= error.userId ? "is-invalid":"" %>"
-                                placeholder="Enter ID"
+                                placeholder="Enter Your Institution ID"
                             >
                         </div>
                         <div class="form-group m-3">
