--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -39,7 +39,7 @@
                                 id="userId"
                                 class="form-control <%= error.userId ? "is-invalid" : "" %>"
                                 value="<%= values.userId ? values.userId:"" %>"
-                                placeholder="Enter ID"
+                                placeholder="Enter Your Institution ID"
                             >
                             <div class="invalid-feedback">
                                 <%= error.userId && error.userId %> 
