--- a/views/pages/dashboard/course/take-attendance.ejs
+++ b/views/pages/dashboard/course/take-attendance.ejs
@@ -15,6 +15,7 @@
             <form action="/courses/take-attendance/<%= course._id %>" method="POST">
                 <h5>
                     <span class="mr-5"><%= course.title %> - <%= course.batch %></span>
+                    <span class="mr-5"><%= course.term %></span>
                     <span class="ml-5">Joining Code: <%= course.joiningCode %> </span>
                 </h5>
                 
