--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,18 +18,20 @@
                     <li class="nav-item border-left border-danger px-2">
                         <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
                     </li>
-                    <li class="nav-item border-left border-right border-danger px-2">
+                    <li class="nav-item border-left border-danger px-2">
+                        <a class="nav-link text-white" href="#">
+                            <%= userId %>
+                        </a>
+                    </li>
+                    <li class="nav-item border-left border-danger px-2">
                         <a class="nav-link text-white" href="/auth/logout">Logout</a>
                     </li>
-                    <a class="nav-link text-white" href="#">
-                        <%= userId %>
-                    </a>
 
                     <% } else { %>
                         <li class="nav-item border-left border-danger px-2">
                             <a class="nav-link text-white" href="/auth/login">Login</a>
                         </li>
-                        <li class="nav-item border-left border-right border-danger px-2">
+                        <li class="nav-item border-left border-danger px-2">
                             <a class="nav-link text-white" href="/auth/signup">Signup</a>
                         </li>
                         <% } %>
