some viwes changes

--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -12,6 +12,7 @@
                                 name="userId"
                                 id="userId"
                                 class="form-control <%= error.userId ? "is-invalid":"" %>"
+                                value="<%= values.userId? values.userId:"" %>"
                                 placeholder="Enter Your Institution ID"
                             >
                         </div>
