--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -32,7 +32,8 @@
                             value="Login"
                         ></div>
                     </form>
-                    <a href="signup" class="my-3 text-center">Don't have an account?</a>
+                    <a href="signup" class="my-3 text-center">Forgot password?</a>
+                    <!-- <a href="signup" class="mb-3 text-center">Don't have an account?</a> -->
                 </div>
 
             </div>
