--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,10 +5,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item border-left border-danger px-2">
-                    <a class="nav-link text-white" href="/dashboard"> Dashboard </a>
-                </li>
                 <% if (isLoggedIn) { %>
+                    <li class="nav-item border-left border-danger px-2">
+                        <a class="nav-link text-white" href="/dashboard"> Dashboard </a>
+                    </li>
+                    
                     <li class="nav-item border-left border-danger px-2">
                         <a class="nav-link text-white" href="/courses/create">Create Class</a>
                     </li>
@@ -16,11 +17,20 @@
                         <a class="nav-link text-white" onclick="togglePopup()">Join Class</a>
                     </li>
                     <li class="nav-item dropdown border-left border-danger px-2">
+                        <img 
+                            src=" <%= user.profilePics %> "
+                            alt="profile pics"
+                            class="img-fluid rounded-circle"
+                            id="profilePics"
+                            style="width: 45px; height: 40px;"
+                        >
+                    </li>
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <%= user.userId %>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Settings</a>
+                          <a class="dropdown-item" href="/dashboard/edit-profile">Edit profile</a>
                           <a class="dropdown-item" href="/auth/logout">Logout</a>
                         </div>
                     </li>
