--- a/views/pages/explorer/explorer.ejs
+++ b/views/pages/explorer/explorer.ejs
@@ -1,5 +1,5 @@
 <%- include("../../partials/header.ejs") %>
-
+<p>Welcome to AAS</p>
 <%- include("../../partials/footer.ejs") %> 
     
     </body>
