--- a/views/pages/auth/resetPassword.ejs
+++ b/views/pages/auth/resetPassword.ejs
@@ -4,36 +4,25 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card card-body mt-4">
-                    <h4 class="text-center">Login To Your Acoount</h4>
-                    <form action="/auth/login" method="POST">
+                    <h4 class="text-center">Reset Password</h4>
+                    <form action="/auth/reset-password" method="POST">
                         <div class="form-group m-3">
                             <input
                                 type="text"
                                 name="userId"
                                 id="userId"
                                 class="form-control <%= error.userId ? "is-invalid":"" %>"
-                                value="<%= values.userId? values.userId:"" %>"
                                 placeholder="Enter Your Institution ID"
                             >
                         </div>
-                        <div class="form-group m-3">
-                            <input
-                                type="password"
-                                name="password"
-                                id="password"
-                                class="form-control <%= error.password ? "is-invalid":"" %>"
-                                placeholder="Enter password"
-                            >
-                        </div>
+                        
                         <div class="form-group  m-3">
                         <input
                             type="submit"
                             class="btn btn-primary form-group ms-3"
-                            value="Login"
+                            value="Reset"
                         ></div>
                     </form>
-                    <a href="reset-password" class="my-3 text-center">Forgot password?</a>
-                    <!-- <a href="signup" class="mb-3 text-center">Don't have an account?</a> -->
                 </div>
 
             </div>
