--- a/views/pages/explorer/explorer.ejs
+++ b/views/pages/explorer/explorer.ejs
@@ -1,5 +1,5 @@
 <%- include("../../partials/header.ejs") %>
-<p>Welcome to AAS</p>
+<img src="images/classroom2.jpg" alt="AAS" width="100%" height="550px">
 <%- include("../../partials/footer.ejs") %> 
     
     </body>
