--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -25,7 +25,9 @@
         
         <% for(let course of myJoinedClass.reverse()){ %>
             <div class="text-center my-2 pb-1 border-bottom border-info rounded-bottom"> 
-                <%= course.title%> - <%= course.batch %>
+                <a class = "text-white" href="/courses/take-attendances/<%= course._id %>">
+                    <%= course.title %> - <%= course.batch %>
+                </a>
             </div>
         <% } %>
         </div>
