--- a/views/pages/dashboard/create-profile.ejs
+++ b/views/pages/dashboard/create-profile.ejs
@@ -38,10 +38,9 @@
                                             id="institute"
                                         >
                                             <option value="0" selected>Choose Your Institute</option>
-                                            <option value="1">Bangladesh University Of Engineering and Technology</option>
-                                            <option value="2">Dhaka University</option>
-                                            <option value="3">Rajshahi University</option>
-                                            <option value="4">Stamford University Bangladesh</option>
+                                            <% for( let ins of institute ) { %>
+                                                <option value="<%= ins._id%>"><%= ins.name%></option>
+                                            <% } %>
                                         </select>
                                         <div class="invalid-feedback">
                                             <%= error.institute %>
