--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -43,7 +43,10 @@
                         <li class="nav-item border-left border-danger px-2">
                             <a class="nav-link text-white" href="/auth/signup">Signup</a>
                         </li>
-                        <% } %>
+                        <li class="nav-item border-left border-danger px-2">
+                            <a class="nav-link text-white" href="/contact-us">Contact Us</a>
+                        </li>
+                    <% } %>
             </ul>
         </div>
     </div>
